Modifs settings, modèle MediaTemoignage et services.html

--- a/main/templates/main/services.html
+++ b/main/templates/main/services.html
@@ -73,9 +73,9 @@ background-repeat: no-repeat;">
   <div class="team-grid">
     
     <div class="team-member">
-      <img src="{% static 'images/hassane.jpg' %}" alt="Hassane">
+      <img src="{% static 'main/img/hassane.jpg' %}" alt="Hassane">
       <h3>Hassane AMADOU</h3>
-      <p>Fondateur & Ingénieur génie civil</p>
+      <p>Fondateur & ARCHITECTE</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-github"></i></a>
@@ -83,7 +83,7 @@ background-repeat: no-repeat;">
     </div>
 
     <div class="team-member">
-      <img src="{% static 'images/brigitte.jpg' %}" alt="Brigitte">
+      <img src="{% static 'main/img/brigitte.jpg' %}" alt="Brigitte">
       <h3>Brigitte GBEDESSI</h3>
       <p>Sécrétaire Comptable</p>
       <div class="social-icons">
@@ -93,7 +93,7 @@ background-repeat: no-repeat;">
     </div>
 
     <div class="team-member">
-      <img src="{% static 'images/fadil.jpg' %}" alt="Fadil">
+      <img src="{% static 'main/img/fadil.jpg' %}" alt="Fadil">
       <h3>Fadil EKPAYE</h3>
       <p>Responsable pédagogique</p>
       <div class="social-icons">
@@ -101,6 +101,41 @@ background-repeat: no-repeat;">
       </div>
     </div>
 
+    <div class="team-member">
+      <img src="{% static 'main/img/Jauram.jpg' %}" alt="Jauram">
+      <h3>AXEL Chris Jauram</h3>
+      <p>Ingénieur génie civil & Prof en Robot</p>
+      <div class="social-icons">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+      </div>
+    </div>
+
+    <div class="team-member">
+      <img src="{% static 'main/img/Yasser.jpg' %}" alt="Yasser">
+      <h3>DAMTARE Yasser</h3>
+      <p>Prof en AutoCad, Covadis, Qgis, Arcgis</p>
+      <div class="social-icons">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+      </div>
+    </div>
+
+    <div class="team-member">
+      <img src="{% static 'main/img/Arsène.jpg' %}" alt="Arsène">
+      <h3>ADZAHO Arsène</h3>
+      <p>Prof en Robot, CypeCad</p>
+      <div class="social-icons">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+      </div>
+    </div>
+
+    <div class="team-member">
+      <img src="{% static 'main/img/Rodrigue.jpg' %}" alt="Rodrigue">
+      <h3>MFOULU Rodrigue</h3>
+      <p>Architècte & Prof en 3DS Max</p>
+      <div class="social-icons">
+        <a href="#"><i class="bx bxl-twitter"></i></a>
+      </div>
+    </div>
     <!-- Ajoute d'autres membres ici -->
 
   </div>
