Mise à jour de services.html

--- a/main/templates/main/services.html
+++ b/main/templates/main/services.html
@@ -73,7 +73,7 @@ background-repeat: no-repeat;">
   <div class="team-grid">
     
     <div class="team-member">
-      <img src="{% static 'main/img/hassane.jpg' %}" alt="Hassane">
+      <img src="{% static 'main/img/hassane.jpeg' %}" alt="Hassane">
       <h3>Hassane AMADOU</h3>
       <p>Fondateur & ARCHITECTE</p>
       <div class="social-icons">
