style toggler icon

--- a/main/static/main/style.css
+++ b/main/static/main/style.css
@@ -12,6 +12,21 @@ footer {
 }
 
 
+
+/* Icône blanche par défaut */
+.navbar-toggler-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+}
+
+/* Icône noire en mode sombre */
+@media (prefers-color-scheme: dark) {
+  .navbar-toggler-icon {
+      background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+  }
+}
+
+
+
 /* Base claire */
 body {
     background-color: #ffffff;
