--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Centre de formation H-tech Corporate spécialisé en technologie et développement web.">
+    <meta name="google-site-verification" content="QrpRjV7b8KPkXZWqiS3PXez5vNUewQ-b7kHmypOTy6w" />
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
     <link rel="icon" href="{% static 'main/img/logo.jpeg' %}" type="image/x-icon">
     <title>H-tech Corporate</title>
