Ajout du sitemap et mise à jour de robots.txt

--- a/main/templates/main/about.html
+++ b/main/templates/main/about.html
@@ -33,6 +33,9 @@ section.apropos {
 
 </style>
 
+<title>a propos | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
 
 <body class="light-mode" style="background-image: url('{% static 'main/img/a propos.jpg' %}');
 background-size: cover;
