--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>base | H-tech Corporate</title>
+    <meta name="robots" content="index, follow">
     <meta name="description" content="Centre de formation H-tech Corporate spécialisé en technologie et développement web.">
     <meta name="google-site-verification" content="QrpRjV7b8KPkXZWqiS3PXez5vNUewQ-b7kHmypOTy6w" />
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
