--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -139,6 +139,10 @@ form button:hover {
 
 </style>
 
+<title>contact | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
+
 
 <body class="light-mode" style="background-image: url('{% static 'main/img/contact.jpg' %}');
 background-size: cover;
