--- a/main/templates/main/formations.html
+++ b/main/templates/main/formations.html
@@ -12,7 +12,10 @@
   color:rgb(14, 22, 139) !important;
 }
   </style>
-  
+  <title>formations | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
+
   <body class="light-mode" style="background-image: url('{% static 'main/img/back.jpg' %}');
   background-size: cover;
   background-position: center;
