--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -170,6 +170,9 @@ body.dark-mode {
 </style>
 
 <link rel="stylesheet" href="{% static 'main/style.css' %}">
+<title>Accueil | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
 
 
 <body class="light-mode" style="background-image: url('{% static 'main/img/background.jpg' %}');
