--- a/main/templates/main/inscription.html
+++ b/main/templates/main/inscription.html
@@ -92,6 +92,10 @@ form button:hover {
 }
 </style>
 
+<title>inscription | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
+
 <body class="light-mode" style="background-image: url('{% static 'main/img/inscrit.jpg' %}');
 background-size: cover;
 background-position: center;
