--- a/main/templates/main/services.html
+++ b/main/templates/main/services.html
@@ -62,6 +62,9 @@
 }
 </style>
 
+<title>équipe | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
 
 <body class="light-mode" style="background-image: url('{% static 'main/img/formation.jpg' %}');
 background-size: cover;
