--- a/main/templates/main/temoignages.html
+++ b/main/templates/main/temoignages.html
@@ -154,6 +154,11 @@
 
 </style>
 
+<title>témoignage | H-tech Corporate</title>
+<meta name="description" content="Brève description de la page">
+<meta name="robots" content="index, follow">
+
+
 <!-- Bannière -->
 <div class="banner" style="background-image: url('{% static 'main/img/temoin.jpg' %}');">
     <div class="banner-content">
