--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 {% load static %}
 <html lang="fr">
+<style>
+
+    /* Style de l'icône du menu (hamburger) */
+    .custom-toggler .navbar-toggler-icon {
+        background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='black' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+    }
+    
+    /* En mode sombre : icône blanche */
+    
+    .dark-mode .custom-toggler .navbar-toggler-icon {
+            background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 30 30' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='white' stroke-width='2' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
+        }
+
+    
+</style>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -27,9 +42,11 @@
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgb(248, 248, 248);">
                 <div class="container">
                     <a class="navbar-brand text-black" href="{% url 'home' %}">H-TECH CORPORATE</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+                  
+                    <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
                     </button>
+                    
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav ms-auto">
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'home' %}">Accueil</a></li>
