Modification du modèle MediaTemoignage

--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -198,7 +198,7 @@ background-repeat: no-repeat;">
             <i class='bx bx-map'></i>
           </div>
           <h3>Notre adresse</h3>
-          <p>Agoè Minamadou à côté de ESA, Lomé, TOGO.</p>
+          <p>Agoè Minamadou à côté de ESA, Cacavélie Cour d'appel Lomé, TOGO.</p>
         </div>
       </div>
 
@@ -208,7 +208,9 @@ background-repeat: no-repeat;">
             <i class='bx bx-phone'></i>
           </div>
           <h3>Contact</h3>
-          <p>Téléphone: <a href="tel:+22898700015">+228 98700015 +228 70239406</a></p>
+          <p>Téléphone: 
+            <a href="tel:+22898700015">+228 98700015</a></p>
+            <p> <a href="tel:+22870239406"> +228 70239406</a></p>
           <p>Email: <a href="mailto:htechcorporatetogo@gmail.com">htechcorporatetogo@gmail.com</a></p>
         </div>
       </div>
