--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -197,7 +197,7 @@ body.dark-mode {
     
     <div style="display: flex; justify-content: center; align-items: center; width: 100%; margin-top: 20px;">
         <video style="max-width: 100%; width: 100%; max-height: 500px;" controls>
-            <source src="{{ video_pub.video.url }}" type="video/mp4">
+            <source src="{{ video.fichier.url }}" type="video/mp4">
             Votre navigateur ne prend pas en charge la lecture de la vidéo.
         </video>
     </div>
