--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -144,7 +144,7 @@ form button:hover {
 <meta name="robots" content="index, follow">
 
 
-<body class="light-mode" style="background-image: url('{% static 'main/img/contact.jpg' %}');
+<body class="light-mode" style="background-image: url('{% static 'main/img/contacts.jpg' %}');
 background-size: cover;
 background-position: center;
 background-repeat: no-repeat;">
