--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -204,6 +204,7 @@ body.dark-mode {
 {% else %}
     <p>Aucune vidéo disponible pour le moment.</p>
 {% endif %}
+<p>Lien Cloudinary : {{ video.fichier.url }}</p>
 
 
 </section>
