--- a/main/templates/main/home.html
+++ b/main/templates/main/home.html
@@ -191,20 +191,19 @@ body.dark-mode {
 {% load cloudinary %}
 
 {% if video %}
-    <div class="video-container">
-        <video width="100%" controls>
-            <source src="{% cloudinary video.fichier format='mp4' %}" type="video/mp4">
+    <div class="video-container text-center" style="display: flex; flex-direction: column; align-items: center; justify-content: center;">
+        <video width="80%" controls style="margin-bottom: 20px;">
+            <source src="{{ video.fichier.url }}" type="video/mp4">
             Votre navigateur ne supporte pas la lecture de cette vidéo.
         </video>
-        <p>{{ video.description }}</p>
+        <p style="max-width: 80%; text-align: center;">{{ video.description }}</p>
         {% if video.lien_action %}
-            <a href="{{ video.lien_action }}" class="btn btn-primary">S’inscrire maintenant</a>
+            <a href="{{ video.lien_action }}" class="btn btn-primary mt-2">S’inscrire maintenant</a>
         {% endif %}
     </div>
 {% else %}
-    <p>Aucune vidéo disponible pour le moment.</p>
+    <p class="text-center">Aucune vidéo disponible pour le moment.</p>
 {% endif %}
-<p>Lien Cloudinary : {{ video.fichier.url }}</p>
 
 
 </section>
