--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -24,7 +24,7 @@
     <meta name="description" content="Centre de formation H-tech Corporate spécialisé en technologie et développement web.">
     <meta name="google-site-verification" content="QrpRjV7b8KPkXZWqiS3PXez5vNUewQ-b7kHmypOTy6w" />
     <link rel="stylesheet" href="{% static 'main/style.css' %}">
-    <link rel="icon" href="{% static 'main/img/logo.jpeg' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'main/img/logo.png' %}" type="image/x-icon">
     <title>H-tech Corporate</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
@@ -36,7 +36,7 @@
     <header style="background: linear-gradient(135deg, #1d4c6d, #3e96ed); color: white; padding: 40px 20px;">
         <div class="container">
             <div class="d-flex align-items-center">
-                <img src="{% static 'main/img/logo.jpeg' %}" alt="Logo H-tech Corporate" width="100" height="80" class="me-3">
+                <img src="{% static 'main/img/logo.png' %}" alt="Logo H-tech Corporate" width="100" height="80" class="me-3">
                 <h1 class="mb-0">H-TECH CORPORATE</h1>
             </div>
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgb(248, 248, 248);">
@@ -79,7 +79,7 @@
              background-position: center;
              background-repeat: no-repeat;">
         <div class="container">
-            <img src="{% static 'main/img/logo.jpeg' %}" alt="Logo H-tech" width="80" height="60" class="mb-2">
+            <img src="{% static 'main/img/logo.png' %}" alt="Logo H-tech" width="80" height="60" class="mb-2">
             <p class="mb-2">&copy; 2025 H-tech Corporate - Tous droits réservés</p>
             <div>
                 <a href="#" class="text-white me-3"><i class="bi bi-facebook"></i></a>
