nouvelle page nos services

--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -54,9 +54,10 @@
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'formations' %}">Formations</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'temoignages' %}">Témoignages</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'services' %}">Notre équipe</a></li>
+                            <li class="nav-item"><a class="nav-link text-black" href="{% url 'prestation' %}">Nos services</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'contact' %}">Contact</a></li>
                             <li class="nav-item">
-                                <a class="btn btn-outline-light btn-sm text-black" href="{% url 'inscription' %}">S'inscrire</a>
+                        <a class="btn btn-outline-light btn-sm text-black" href="{% url 'inscription' %}">S'inscrire</a>
                             </li>
                         </ul>
                     </div>
