--- a/main/templates/main/contact.html
+++ b/main/templates/main/contact.html
@@ -161,19 +161,19 @@ background-repeat: no-repeat;">
 
   <form method="post">
     {% csrf_token %}
-    <label for="nom">Nom</label>
+    <label><i class="fas fa-user"></i> Nom</label>
     <input type="text" id="nom" name="nom" required>
 
-    <label for="email">Adresse e-mail</label>
+    <label><i class="fas fa-envelope"></i> Email</label>
     <input type="email" id="email" name="email" required>
 
-    <label for="sujet">Sujet</label>
+    <label><i class="fas fa-pen"></i> Sujet</label>
     <input type="text" id="sujet" name="sujet" required>
 
-    <label for="message">Message</label>
+    <label><i class="fas fa-comment-alt"></i> Message</label>
     <textarea id="message" name="message" rows="5" required></textarea>
 
-    <button type="submit">Envoyer</button>
+    <button type="submit"><i class="fas fa-paper-plane"></i> Envoyer</button>
   </form>
 
  <a href="https://wa.me/22898700015?text=Bonjour%20je%20souhaite%20obtenir%20plus%20d'informations%20sur%20vos%20formations"
