Ajout des fichiers pour déploiement Render

--- a/main/templates/main/services.html
+++ b/main/templates/main/services.html
@@ -91,9 +91,9 @@ background-repeat: no-repeat;">
         <a href="#"><i class="bx bxl-github"></i></a>
       </div>
     </div>
-  </section>
+</section>
 
-  <section class="team-section">
+<section class="team-section">
     <div class="team-grid">
     <div class="team-member">
       <img src="{% static 'main/img/hassane.jpeg' %}" alt="Hassane">
@@ -116,7 +116,7 @@ background-repeat: no-repeat;">
     </div>
 
     <div class="team-member">
-      <img src="{% static 'main/img/fadil.jpg' %}" alt="Fadil">
+      <img src="{% static 'main/img/fadil.jpeg' %}" alt="Fadil">
       <h3>Fadil EKPAYE</h3>
       <p>Responsable pédagogique</p>
       <div class="social-icons">
@@ -136,7 +136,7 @@ background-repeat: no-repeat;">
     <div class="team-member">
       <img src="{% static 'main/img/Fredy.jpeg' %}" alt="Fredy">
       <h3>Fredy Biova GBESSO</h3>
-      <p>Graphiste monteur vidéo</p>
+      <p>Graphiste </p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-github"></i></a>
@@ -154,8 +154,8 @@ background-repeat: no-repeat;">
 
     <div class="team-member">
       <img src="{% static 'main/img/Arsène.jpg' %}" alt="Arsène">
-      <h3>ADZAHO Arsène</h3>
-      <p>Prof en Robot, CypeCad</p>
+      <h3>Marouf God's Will OBING</h3>
+      <p>Prof en CypeCad</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-twitter"></i></a>
       </div>
