--- a/main/templates/main/services.html
+++ b/main/templates/main/services.html
@@ -85,7 +85,7 @@ background-repeat: no-repeat;">
     <div class="team-member">
       <img src="{% static 'main/img/Omar.jpeg' %}" alt="Omar">
       <h3>Omar Farouk KOUGBADA</h3>
-      <p>Responsable des formations</p>
+      <p> Ingénieur logiciel sénior, expert en intéligence artificielle et consultant en transformation digitale, Responsable des formations à H-tech Corporate</p>
       <div class="social-icons">
         <a href="#"><i class="bx bxl-linkedin"></i></a>
         <a href="#"><i class="bx bxl-github"></i></a>
