--- a/main/templates/main/base.html
+++ b/main/templates/main/base.html
@@ -19,7 +19,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>base | H-tech Corporate</title>
+    <title>H-tech Corporate</title>
     <meta name="robots" content="index, follow">
     <meta name="description" content="Centre de formation H-tech Corporate spécialisé en technologie et développement web.">
     <meta name="google-site-verification" content="QrpRjV7b8KPkXZWqiS3PXez5vNUewQ-b7kHmypOTy6w" />
@@ -43,7 +43,7 @@
             </div>
             <nav class="navbar navbar-expand-lg navbar-dark" style="background-color:rgb(248, 248, 248);">
                 <div class="container">
-                    <a class="navbar-brand text-black" href="{% url 'home' %}">H-TECH CORPORATE</a>
+                    <a class="navbar-brand text-black" href="{% url 'home' %}"></a>
                   
                     <button class="navbar-toggler custom-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
                         <span class="navbar-toggler-icon"></span>
@@ -56,6 +56,7 @@
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'formations' %}">Formations</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'temoignages' %}">Témoignages</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'services' %}">Notre équipe</a></li>
+                            <li class="nav-item"><a class="nav-link text-black" href="{% url 'galerie' %}">Galerie</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'prestation' %}">Nos services</a></li>
                             <li class="nav-item"><a class="nav-link text-black" href="{% url 'contact' %}">Contact</a></li>
                             <li class="nav-item">
